--- a/src/static/less/Drums.less
+++ b/src/static/less/Drums.less
@@ -1,5 +1,6 @@
 @import './mixins/_mixins.less';
 
+// Grid mixin.
 .display-grid {
     display: grid;
     gap: 10px;
@@ -21,11 +22,13 @@
         margin: 1rem 0;
         padding: 1rem;
         border-radius: 3px;
-        background: rgba(255, 255, 255, 0.3);
+        background: rgba(255, 255, 255, 0.25);
+
+        // Todo: Decide upon adding a box shadow.
+        // box-shadow: 0px 0px 10px 0px rgba(255, 255, 255, 1);
     }
 
     &-pads {
-        // Grid mixin.
         .display-grid();
 
         .drum-pad {
@@ -36,15 +39,16 @@
                 0 4px 5px 0 rgba(0, 0, 0, 0.14),
                 0 1px 10px 0 rgba(0, 0, 0, 0.12);
 
+            @box-shadow-white: 0px 0px 5px 0px rgba(255, 255, 255, 1);
+            @box-shadow-white-hover: 0px 0px 0px 0px rgba(255, 255, 255, 1);
+
             .font(20px, 600, -0.017em, 28px);
 
             opacity: 1;
             padding: 2rem;
-
             border: none;
             border-radius: 3px;
-            box-shadow: @box-shadow;
-
+            box-shadow: @box-shadow-white;
             cursor: pointer;
             white-space: nowrap;
             text-transform: none;
@@ -65,7 +69,7 @@
 
             &:hover {
                 opacity: 0.9;
-                box-shadow: @box-shadow-hover;
+                box-shadow: @box-shadow-white-hover;
             }
         }
     }
