--- a/src/static/less/App.less
+++ b/src/static/less/App.less
@@ -1,5 +1,6 @@
 @import './mixins/_mixins.less';
 @import 'Drums.less';
+@import 'Spinner.less';
 
 @font-color-dark: white;
 @font-color-light: #2d2d2d;
